fix collapse/expand all card group issues
- Card groups expand far enough to show all
  cards on small viewports.
- Collapse/expand all buttons no longer disappear
  on Interactions page cacheless hard refresh.
- Clicking group by buttons on Interactions page
  will now cause the collapse/expand states of
  card groups to be reset, based on viewport size.
- Relationship card note text limited to 2 lines.
- Clicking card group child elements no longer
  triggers unneeded card group state calculations.

--- a/src/app/components/card-group/card-group.component.html
+++ b/src/app/components/card-group/card-group.component.html
@@ -6,6 +6,6 @@
 	</button>
 </h2>
 
-<div class="card-scroll custom-scrollbar" [class.hidden]="!open()">
+<div class="card-scroll custom-scrollbar" [class.hidden]="!open()" [style.max-height.px]="maxGroupHeight() ">
 	<ng-content />
 </div>
