--- a/src/app/components/card-group/card-group.component.scss
+++ b/src/app/components/card-group/card-group.component.scss
@@ -46,16 +46,14 @@
 		gap: 32px;
 		overflow-x: hidden;
 		overflow-y: hidden;
-		max-height: 200vh;
-		padding: 8px 4px 0;
+		padding: 12px 4px 0;
 		transition:
-			max-height 0.5s,
+			max-height 0.5s, // set in template
 			padding-top 0.5s,
 			padding-bottom 0.5s,
 			overflow-x 0.5s;
 
 		&.hidden {
-			max-height: 0;
 			padding-top: 0;
 			padding-bottom: 0;
 			overflow-x: hidden;
@@ -64,7 +62,6 @@
 		@media screen and (min-width: $small-breakpoint) {
 			flex-direction: row;
 			overflow-x: auto;
-			max-height: 330px;
 			padding: 16px 12px 16px;
 		}
 	}
