use DeletionService to reuse common deletion code

--- a/src/app/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/components/confirmation-dialog/confirmation-dialog.component.html
@@ -2,7 +2,7 @@
 
 <mat-dialog-content>
 	<p>
-		Are you sure you want to delete {{data.deleteTarget}}?<br /><br />
+		Are you sure you want to delete {{data.deleteTarget}}?<br />
 		This action cannot be undone.
 	</p>
 </mat-dialog-content>
