add/edit interaction dialog, reactive forms
- The Add/Edit Interaction page has been converted to a dialog.
- Relationship & Interaction modification now uses proper
  Angular reactive forms.

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,10 +2,10 @@
 	<mat-icon aria-hidden="true">perm_identity</mat-icon>
 	<a class="name" [routerLink]="editRoute()">{{relationshipName()}}</a>
 
-	<a class="edit" [routerLink]="editRoute()" (click)="onEditClick()" mat-icon-button [attr.aria-label]="'Edit ' + modelName()">
+	<a [routerLink]="editRoute()" (click)="onEditClick()" mat-icon-button [attr.aria-label]="'Edit ' + modelName()">
 		<mat-icon>edit</mat-icon>
 	</a>
-	<button class="delete" (click)="onDeleteClick()" (click)="onEditClick()" mat-icon-button [attr.aria-label]="'Delete ' + modelName()">
+	<button class="delete" (click)="onDeleteClick()" mat-icon-button [attr.aria-label]="'Delete ' + modelName()">
 		<mat-icon>delete</mat-icon>
 	</button>
 </div>
