--- a/src/app/components/page-header-bar/page-header-bar.component.scss
+++ b/src/app/components/page-header-bar/page-header-bar.component.scss
@@ -11,7 +11,6 @@
 	background: var(--header-background-color);
 	color: var(--secondary-title-color);
 	padding: 0;
-	margin-bottom: 48px;
 	transition: top 0.5s;
 	&.hidden {
 		top: calc(var(--page-small-header-bar-height) * -1);
@@ -22,30 +21,43 @@
 	@media screen and (min-width: $small-breakpoint) {
 		height: var(--page-large-header-bar-height);
 	}
-}
 
-.contents {
-	display: flex;
-	align-items: center;
-	gap: 8px;
-	width: 100%;
-	height: 100%;
-	max-width: var(--max-page-width);
-	padding: 8px;
-	white-space: nowrap;
-	margin: 0 auto;
-	@media screen and (min-width: $small-breakpoint) {
-		gap: 24px;
+	.contents {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		width: 100%;
+		height: 100%;
+		max-width: var(--max-page-width);
+		padding: 8px;
+		white-space: nowrap;
+		margin: 0 auto;
+		@media screen and (min-width: $small-breakpoint) {
+			gap: 24px;
+		}
+	}
+
+	h1 {
+		flex: 1;
+		color: var(--secondary-title-color);
+		text-align: start;
+		margin: 0;
 	}
 }
 
-h1 {
-	flex: 1;
-	color: var(--secondary-title-color);
-	font-size: var(--page-title-font-size-small);
-	text-align: start;
-	margin: 0;
-	@media screen and (min-width: $small-breakpoint) {
-		font-size: var(--page-title-font-size-large);
+:host:not(.dialog) {
+	margin-bottom: 48px;
+	h1 {
+		font-size: var(--page-title-font-size-small);
+		@media screen and (min-width: $small-breakpoint) {
+			font-size: var(--page-title-font-size-large);
+		}
+	}
+}
+
+:host.dialog {
+	position: relative;
+	h1 {
+		font-size: var(--mdc-dialog-subhead-size);
 	}
 }
