--- a/src/app/pages/edit-relationship/edit-relationship.component.scss
+++ b/src/app/pages/edit-relationship/edit-relationship.component.scss
@@ -8,7 +8,7 @@ h1 {
 	margin: 0;
 }
 
-section.relationship-details {
+section.relationship-details form {
 	padding: 0 12px 12px;
 	border-bottom: 2px solid var(--large-card-border-color);
 	mat-form-field {
@@ -73,13 +73,13 @@ section.interactions {
 		grid-column-start: 1;
 		grid-column-end: -1;
 		margin: 32px 0;
-		a {
+		button {
 			position: absolute;
 			top: 0;
 			right: 0;
 			font-size: initial;
 		}
-		a.add-interaction-mobile {
+		button.add-interaction-mobile {
 			mat-icon {
 				transform: scale(1.6);
 			}
@@ -87,7 +87,7 @@ section.interactions {
 				display: none;
 			}
 		}
-		a.add-interaction-desktop {
+		button.add-interaction-desktop {
 			display: none;
 			align-items: center;
 			@media screen and (min-width: $small-breakpoint) {
