converted add/edit relationship page to dialog
- RelationshipFormService created to manage add/edit/delete
  of relationships.
- In relationship dialog, interactions are displayed as rows
  of expandable headers that show the date of the interaction
  and the beginning of any notes taken.

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,13 +1,26 @@
 <div class="header">
-	<mat-icon aria-hidden="true">perm_identity</mat-icon>
-	<a class="name" [routerLink]="editRoute()">{{relationshipName()}}</a>
+	<button class="name" [class.hidden]="!open()" mat-button>{{relationshipName()}}</button>
 
-	<a [routerLink]="editRoute()" (click)="onEditClick()" mat-icon-button [attr.aria-label]="'Edit ' + modelName()">
+	<div class="collapsed-header" [class.visible]="!open()">
+		@if (collapsedLeftText()) {
+		<span class="collapsed-left-text">{{collapsedLeftText()}}</span>
+		}
+		@if (collapsedRightText()) {
+			<span class="collapsed-right-text">{{collapsedRightText()}}</span>
+		}
+	</div>
+
+	<button class="edit" (click)="onEditClick()" [class.hidden]="!open()" mat-icon-button [attr.aria-label]="'Edit ' + modelName()">
 		<mat-icon>edit</mat-icon>
-	</a>
-	<button class="delete" (click)="onDeleteClick()" mat-icon-button [attr.aria-label]="'Delete ' + modelName()">
+	</button>
+	<button class="delete" (click)="onDeleteClick()" [class.hidden]="!open()" mat-icon-button [attr.aria-label]="'Delete ' + modelName()">
 		<mat-icon>delete</mat-icon>
 	</button>
+	@if (collapsible()) {
+		<button class="collapse-expand" (click)="onCollapseExpandClick()" mat-icon-button [attr.aria-label]="(open() ? 'Collapse' : 'Expand') + ' card'">
+			<mat-icon [class.open]="open()">chevron_right</mat-icon>
+		</button>
+	}
 </div>
 
 <div class="body">
