--- a/src/app/components/card-group/card-group.component.html
+++ b/src/app/components/card-group/card-group.component.html
@@ -1,5 +1,5 @@
 <h2 [id]="'card-group-title-' + instanceNumber()" [style.color]="headerColor()">
-	<button (click)="onGroupHeaderClick()">
+	<button (click)="onGroupHeaderClick()" [attr.aria-label]="(open() ? 'Collapse' : 'Expand') + ' card'">
 		<span>{{header()}}</span>
 		<span>({{cardCount()}})</span>
 		<mat-icon [class.open]="open()">chevron_right</mat-icon>
