--- a/src/app/pages/edit-interaction/edit-interaction.component.scss
+++ b/src/app/pages/edit-interaction/edit-interaction.component.scss
@@ -4,12 +4,12 @@
 	display: block;
 }
 
-app-page-header-bar {
-	font-size: var(--mdc-dialog-subhead-size);
-}
-
 mat-form-field ::ng-deep .mat-mdc-form-field-subscript-wrapper {
 	font-size: 0.8rem;
+}
+
+h2 {
+	font-size: 1.15rem;
 }
 
 section.relationship {
@@ -20,6 +20,8 @@ section.relationship {
 
 section.relationship,
 section.interaction-details {
+	padding-bottom: 20px;
+	border-bottom: 2px solid var(--large-card-border-color);
 	mat-form-field {
 		display: flex;
 		width: min-content;
@@ -31,6 +33,9 @@ section.interaction-details {
 }
 
 section.interaction-details {
+	h2 {
+		margin-top: 0;
+	}
 	@media screen and (min-width: $small-breakpoint) {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
@@ -46,6 +51,7 @@ section.topics {
 	h2 {
 		display: flex;
 		align-items: center;
+		margin: 20px 0;
 		button {
 			margin-left: auto;
 		}
