minor CSS & verbiage tweaks
- Interaction dialog spacing reduced on small viewports.
- Typos fixed.
- Created DIALOG_CONFIG constant to reduce duplication.
- Dialogs' background color matches app theme.
- Click target size increased on <select> dropdowns.

--- a/src/app/components/interaction-dialog/interaction-dialog.component.html
+++ b/src/app/components/interaction-dialog/interaction-dialog.component.html
@@ -41,7 +41,7 @@
 					<option [value]="typeOptions.Other">Other</option>
 				</select>
 				@if (form.controls.type.hasError('required')) {
-					<mat-error>Type of interaction is required</mat-error>
+					<mat-error>Interaction type is required</mat-error>
 				}
 			</mat-form-field>
 
