--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -36,6 +36,8 @@ $relationships-client-theme: mat.define-theme((
 	--mat-option-focus-state-layer-color: var(--header-background-color);
 	--mdc-outlined-text-field-container-shape: var(--primary-border-radius);
 	--mdc-dialog-subhead-size: 1.5rem;
+	--mdc-text-button-label-text-size: 1.25rem;
+	--mdc-dialog-container-color: var(--card-background);
 }
 
 // Comment out the line below if you want to use the pre-defined typography utility classes.
